# 2d_br_sfml

./: CMakeLists.txt  todo.txt
app/: CMakeLists.txt  Game.cpp  Game.h  Player.cpp  Player.h  main.cpp
app/net/: NetClient.cpp  NetClient.h  NetworkPlayer.cpp  NetworkPlayer.h
contrib/: contrib.cmake
server/: CMakeLists.txt  Client.cpp  Client.h  GameServer.cpp  GameServer.h  main.cpp
shared/: Coordinate.h  Network.h  PlayerState.h  Velocity.h
